syntax = "proto3";

package CronService;

// The greeting service definition.
service Cron {
    // Sends a greeting
    rpc Scheduler (CronReq) returns (CronResp) {}
}

// The request message containing the user's name.
message CronReq {
    string name = 1;
}

// The response message containing the greetings
message CronResp {
    int64 code = 1;
    string msg = 2;
}